--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,47 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1.00001,user-scalable=no" />
-    <meta name="description" content="Progress for the future" />
-    <meta name="theme-color" content="#111827" />
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport"
+  content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1.00001,user-scalable=no" />
+<meta name="description" content="Progress for the future" />
+<meta name="theme-color" content="#111827" />
+<meta name="robots" content="index,follow" />
 
-    <!-- Canonical and OG URL -->
-    <link rel="canonical" href="https://progressforbritain.org" />
-    <meta property="og:url" content="https://progressforbritain.org" />
+<title>Progress UK — Progress for the Future</title>
 
-    <!-- Favicon -->
-    <link rel="icon" href="/favicon.png" />
+<!-- Canonical and OG URL -->
+<link rel="canonical" href="https://progressforbritain.org" />
+<meta property="og:url" content="https://progressforbritain.org" />
 
-    <!-- Open Graph meta tags -->
-    <meta property="og:title" content="Progress UK" />
-    <meta property="og:description" content="Progress for the future" />
-    <meta property="og:image" content="https://progress-web-backend.vercel.app/og/cover-1200x630.png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:type" content="website" />
+<!-- Favicon and icons -->
+<link rel="icon" href="/favicon.png" />
+<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/manifest.json" />
 
-    <!-- Twitter meta tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Progress UK" />
-    <meta name="twitter:description" content="Progress for the future" />
-    <meta name="twitter:image" content="https://progress-web-backend.vercel.app/og/cover-1200x630.png" />
+<!-- Open Graph -->
+<meta property="og:type" content="website" />
+<meta property="og:locale" content="en_GB" />
+<meta property="og:site_name" content="Progress UK" />
+<meta property="og:title" content="Progress UK" />
+<meta property="og:description" content="Progress for the future" />
+<meta property="og:image" content="https://progress-web-backend.vercel.app/og/cover-1200x630.png" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
 
-    <!-- Preconnect to fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    
-    <title>Progress UK</title>
-</head>
-<body>
-    <div id="root"></div>
-    <div id="expo-static-data"></div>
-    <script src="/bundle.js"></script>
-</body>
-</html></content>
-<parameter name="filePath">/Users/tristanhill/Documents/git/progress-web/frontend/public/index.html
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Progress UK" />
+<meta name="twitter:description" content="Progress for the future" />
+<meta name="twitter:image" content="https://progress-web-backend.vercel.app/og/cover-1200x630.png" />
+<meta name="twitter:site" content="@ProgressUK" />
